syntax = "proto3";

package common;

// Order side
enum Side {
  BUY = 0;
  SELL = 1;
}

// Order type
enum OrderType {
  LIMIT = 0;
  MARKET = 1;
}

// Reject reasons matching the C++ protocol
enum RejectReason {
  NONE = 0;
  INVALID_SYMBOL = 1;
  INVALID_PRICE = 2;
  INVALID_QUANTITY = 3;
  DUPLICATE_ORDER_ID = 4;
  UNKNOWN_ORDER = 5;
  INSUFFICIENT_FUNDS = 6;
  MARKET_CLOSED = 7;
  SYSTEM_ERROR = 8;
}

// Timestamp message
message Timestamp {
  uint64 nanos = 1;
}
