syntax = "proto3";

package trading;

import "common.proto";

// Trading Service - handles order submission and market data
service TradingService {
  // Order operations
  rpc SubmitOrder(OrderRequest) returns (OrderResponse);
  rpc CancelOrder(CancelRequest) returns (CancelResponse);
  
  // Market data streams
  rpc StreamExecutions(StreamRequest) returns (stream ExecutionReport);
  rpc StreamOrderBook(StreamRequest) returns (stream OrderBookSnapshot);
  rpc StreamTrades(StreamRequest) returns (stream TradeReport);
  
  // Query operations
  rpc GetOrderBook(OrderBookRequest) returns (OrderBookSnapshot);
  rpc GetOrderStatus(OrderStatusRequest) returns (OrderStatusResponse);
}

// ============================================================================
// Order Operations
// ============================================================================

message OrderRequest {
  string symbol = 1;
  uint64 user_id = 2;
  common.Side side = 3;
  common.OrderType order_type = 4;
  double price = 5;           // Price in dollars (will be converted to cents)
  uint64 quantity = 6;
  uint64 client_order_id = 7; // Optional - will be generated if not provided
}

message OrderResponse {
  uint64 client_order_id = 1;
  uint64 exchange_order_id = 2;
  bool accepted = 3;
  common.RejectReason reject_reason = 4;
  string error_message = 5;
  common.Timestamp timestamp = 6;
}

message CancelRequest {
  string symbol = 1;
  uint64 user_id = 2;
  uint64 client_order_id = 3;
}

message CancelResponse {
  uint64 client_order_id = 1;
  bool cancelled = 2;
  string error_message = 3;
  common.Timestamp timestamp = 4;
}

// ============================================================================
// Market Data
// ============================================================================

message StreamRequest {
  string symbol = 1;
  uint64 user_id = 2; // Optional - for filtering user-specific events
}

message ExecutionReport {
  string symbol = 1;
  uint64 client_order_id = 2;
  uint64 exchange_order_id = 3;
  uint64 execution_id = 4;
  uint64 user_id = 5;
  common.Side side = 6;
  double fill_price = 7;
  uint64 fill_quantity = 8;
  uint64 leaves_quantity = 9;
  common.Timestamp timestamp = 10;
}

message TradeReport {
  string symbol = 1;
  uint64 trade_id = 2;
  double price = 3;
  uint64 quantity = 4;
  common.Timestamp timestamp = 5;
}

message OrderBookSnapshot {
  string symbol = 1;
  repeated PriceLevel bids = 2;
  repeated PriceLevel asks = 3;
  common.Timestamp timestamp = 4;
  uint32 sequence = 5; // For gap detection
}

message PriceLevel {
  double price = 1;
  uint64 quantity = 2;
  uint32 order_count = 3; // Number of orders at this level
}

// ============================================================================
// Query Operations
// ============================================================================

message OrderBookRequest {
  string symbol = 1;
  uint32 depth = 2; // Number of levels (0 = all)
}

message OrderStatusRequest {
  uint64 client_order_id = 1;
  uint64 user_id = 2;
}

message OrderStatusResponse {
  uint64 client_order_id = 1;
  uint64 exchange_order_id = 2;
  string symbol = 3;
  common.Side side = 4;
  double price = 5;
  uint64 original_quantity = 6;
  uint64 filled_quantity = 7;
  uint64 remaining_quantity = 8;
  string status = 9; // "OPEN", "FILLED", "CANCELLED", "REJECTED"
  common.Timestamp timestamp = 10;
}
